Stop writing instance data, and removed unused code