@@ -3,8 +3,6 @@ package com.yahoo.vespa.hosted.controller;
 
 import com.google.common.collect.ImmutableMap;
 import com.yahoo.component.Version;
-import com.yahoo.config.application.api.DeploymentSpec;
-import com.yahoo.config.application.api.ValidationOverrides;
 import com.yahoo.config.provision.ApplicationId;
 import com.yahoo.config.provision.ClusterSpec;
 import com.yahoo.config.provision.Environment;
@@ -13,11 +11,7 @@ import com.yahoo.config.provision.SystemName;
 import com.yahoo.config.provision.zone.ZoneId;
 import com.yahoo.vespa.hosted.controller.api.integration.deployment.ApplicationVersion;
 import com.yahoo.vespa.hosted.controller.api.integration.deployment.JobType;
-import com.yahoo.vespa.hosted.controller.api.integration.organization.IssueId;
-import com.yahoo.vespa.hosted.controller.api.integration.organization.User;
-import com.yahoo.vespa.hosted.controller.application.ApplicationActivity;
 import com.yahoo.vespa.hosted.controller.application.AssignedRotation;
-import com.yahoo.vespa.hosted.controller.application.Change;
 import com.yahoo.vespa.hosted.controller.application.ClusterInfo;
 import com.yahoo.vespa.hosted.controller.application.ClusterUtilization;
 import com.yahoo.vespa.hosted.controller.application.Deployment;
@@ -26,20 +20,17 @@ import com.yahoo.vespa.hosted.controller.application.DeploymentMetrics;
 import com.yahoo.vespa.hosted.controller.application.EndpointId;
 import com.yahoo.vespa.hosted.controller.application.EndpointList;
 import com.yahoo.vespa.hosted.controller.application.JobStatus;
-import com.yahoo.vespa.hosted.controller.application.TenantAndApplicationId;
-import com.yahoo.vespa.hosted.controller.metric.ApplicationMetrics;
 import com.yahoo.vespa.hosted.controller.rotation.RotationStatus;
 
 import java.time.Instant;
-import java.util.Collections;
-import java.util.Comparator;
+import java.util.Collection;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.OptionalInt;
 import java.util.OptionalLong;
+import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -53,95 +44,40 @@ import java.util.stream.Collectors;
 public class Instance {
 
     private final ApplicationId id;
-    private final Instant createdAt;
-    private final DeploymentSpec deploymentSpec;
-    private final ValidationOverrides validationOverrides;
     private final Map<ZoneId, Deployment> deployments;
     private final DeploymentJobs deploymentJobs;
-    private final Change change;
-    private final Change outstandingChange;
-    private final Optional<IssueId> ownershipIssueId;
-    private final Optional<User> owner;
-    private final OptionalInt majorVersion;
-    private final ApplicationMetrics metrics;
-    private final Optional<String> pemDeployKey;
     private final List<AssignedRotation> rotations;
     private final RotationStatus rotationStatus;
 
-    /** Creates an empty instance*/
-    public Instance(ApplicationId id, Instant now) {
-        this(id, now, DeploymentSpec.empty, ValidationOverrides.empty, Collections.emptyMap(),
-             new DeploymentJobs(OptionalLong.empty(), Collections.emptyList(), Optional.empty(), false),
-             Change.empty(), Change.empty(), Optional.empty(), Optional.empty(), OptionalInt.empty(),
-             new ApplicationMetrics(0, 0),
-             Optional.empty(), Collections.emptyList(), RotationStatus.EMPTY);
+    /** Creates an empty instance */
+    public Instance(ApplicationId id) {
+        this(id, Set.of(), new DeploymentJobs(List.of()),
+             List.of(), RotationStatus.EMPTY);
     }
 
     /** Creates an empty instance*/
-    public Instance(ApplicationId id, List<Deployment> deployments, DeploymentJobs deploymentJobs,
+    public Instance(ApplicationId id, Collection<Deployment> deployments, DeploymentJobs deploymentJobs,
                     List<AssignedRotation> rotations, RotationStatus rotationStatus) {
-        this(id,
-             Instant.EPOCH, DeploymentSpec.empty, ValidationOverrides.empty,
-             deployments.stream().collect(Collectors.toMap(Deployment::zone, Function.identity())),
-             deploymentJobs,
-             Change.empty(), Change.empty(), Optional.empty(), Optional.empty(), OptionalInt.empty(),
-             new ApplicationMetrics(0, 0), Optional.empty(),
-             rotations, rotationStatus);
-    }
-
-    /** Used from persistence layer: Do not use */
-    public Instance(ApplicationId id, Instant createdAt, DeploymentSpec deploymentSpec, ValidationOverrides validationOverrides,
-                    List<Deployment> deployments, DeploymentJobs deploymentJobs, Change change,
-                    Change outstandingChange, Optional<IssueId> ownershipIssueId, Optional<User> owner,
-                    OptionalInt majorVersion, ApplicationMetrics metrics, Optional<String> pemDeployKey,
-                    List<AssignedRotation> rotations, RotationStatus rotationStatus) {
-        this(id, createdAt, deploymentSpec, validationOverrides,
-             deployments.stream().collect(Collectors.toMap(Deployment::zone, Function.identity())),
-             deploymentJobs, change, outstandingChange, ownershipIssueId, owner, majorVersion,
-             metrics, pemDeployKey, rotations, rotationStatus);
-    }
-
-    Instance(ApplicationId id, Instant createdAt, DeploymentSpec deploymentSpec, ValidationOverrides validationOverrides,
-             Map<ZoneId, Deployment> deployments, DeploymentJobs deploymentJobs, Change change,
-             Change outstandingChange, Optional<IssueId> ownershipIssueId, Optional<User> owner,
-             OptionalInt majorVersion, ApplicationMetrics metrics, Optional<String> pemDeployKey,
-             List<AssignedRotation> rotations, RotationStatus rotationStatus) {
         this.id = Objects.requireNonNull(id, "id cannot be null");
-        this.createdAt = Objects.requireNonNull(createdAt, "instant of creation cannot be null");
-        this.deploymentSpec = Objects.requireNonNull(deploymentSpec, "deploymentSpec cannot be null");
-        this.validationOverrides = Objects.requireNonNull(validationOverrides, "validationOverrides cannot be null");
-        this.deployments = ImmutableMap.copyOf(Objects.requireNonNull(deployments, "deployments cannot be null"));
+        this.deployments = ImmutableMap.copyOf(Objects.requireNonNull(deployments, "deployments cannot be null").stream()
+                                                      .collect(Collectors.toMap(Deployment::zone, Function.identity())));
         this.deploymentJobs = Objects.requireNonNull(deploymentJobs, "deploymentJobs cannot be null");
-        this.change = Objects.requireNonNull(change, "change cannot be null");
-        this.outstandingChange = Objects.requireNonNull(outstandingChange, "outstandingChange cannot be null");
-        this.ownershipIssueId = Objects.requireNonNull(ownershipIssueId, "ownershipIssueId cannot be null");
-        this.owner = Objects.requireNonNull(owner, "owner cannot be null");
-        this.majorVersion = Objects.requireNonNull(majorVersion, "majorVersion cannot be null");
-        this.metrics = Objects.requireNonNull(metrics, "metrics cannot be null");
-        this.pemDeployKey = pemDeployKey;
         this.rotations = List.copyOf(Objects.requireNonNull(rotations, "rotations cannot be null"));
         this.rotationStatus = Objects.requireNonNull(rotationStatus, "rotationStatus cannot be null");
     }
 
     public Instance withJobPause(JobType jobType, OptionalLong pausedUntil) {
-        return new Instance(id, createdAt, deploymentSpec, validationOverrides, deployments,
-                            deploymentJobs.withPause(jobType, pausedUntil), change, outstandingChange,
-                            ownershipIssueId, owner, majorVersion, metrics, pemDeployKey,
+        return new Instance(id, deployments.values(), deploymentJobs.withPause(jobType, pausedUntil),
                             rotations, rotationStatus);
     }
 
-    public Instance withJobCompletion(JobType jobType, JobStatus.JobRun completion,
-                                      Optional<DeploymentJobs.JobError> jobError) {
-        return new Instance(id, createdAt, deploymentSpec, validationOverrides, deployments,
-                            deploymentJobs.withCompletion(jobType, completion, jobError),
-                            change, outstandingChange, ownershipIssueId, owner, majorVersion, metrics,
-                            pemDeployKey, rotations, rotationStatus);
+    public Instance withJobCompletion(JobType jobType, JobStatus.JobRun completion, Optional<DeploymentJobs.JobError> jobError) {
+        return new Instance(id, deployments.values(), deploymentJobs.withCompletion(jobType, completion, jobError),
+                            rotations, rotationStatus);
     }
 
     public Instance withJobTriggering(JobType jobType, JobStatus.JobRun job) {
-        return new Instance(id, createdAt, deploymentSpec, validationOverrides, deployments,
-                            deploymentJobs.withTriggering(jobType, job), change, outstandingChange,
-                            ownershipIssueId, owner, majorVersion, metrics, pemDeployKey,
+        return new Instance(id, deployments.values(), deploymentJobs.withTriggering(jobType, job),
                             rotations, rotationStatus);
     }
 
@@ -168,7 +104,6 @@ public class Instance {
         Deployment deployment = deployments.get(zone);
         if (deployment == null) return this;    // No longer deployed in this zone.
         return with(deployment.withClusterInfo(clusterInfo));
-
     }
 
     public Instance recordActivityAt(Instant instant, ZoneId zone) {
@@ -190,28 +125,18 @@ public class Instance {
     }
 
     public Instance withoutDeploymentJob(JobType jobType) {
-        return new Instance(id, createdAt, deploymentSpec, validationOverrides, deployments,
-                            deploymentJobs.without(jobType), change, outstandingChange,
-                            ownershipIssueId, owner, majorVersion, metrics, pemDeployKey,
+        return new Instance(id, deployments.values(), deploymentJobs.without(jobType),
                             rotations, rotationStatus);
     }
 
-    public Instance with(ApplicationMetrics metrics) {
-        return new Instance(id, createdAt, deploymentSpec, validationOverrides, deployments,
-                            deploymentJobs, change, outstandingChange, ownershipIssueId, owner, majorVersion,
-                            metrics, pemDeployKey, rotations, rotationStatus);
-    }
-
     public Instance with(List<AssignedRotation> assignedRotations) {
-        return new Instance(id, createdAt, deploymentSpec, validationOverrides, deployments,
-                            deploymentJobs, change, outstandingChange, ownershipIssueId, owner, majorVersion,
-                            metrics, pemDeployKey, assignedRotations, rotationStatus);
+        return new Instance(id, deployments.values(), deploymentJobs,
+                            assignedRotations, rotationStatus);
     }
 
     public Instance with(RotationStatus rotationStatus) {
-        return new Instance(id, createdAt, deploymentSpec, validationOverrides, deployments,
-                            deploymentJobs, change, outstandingChange, ownershipIssueId, owner, majorVersion,
-                            metrics, pemDeployKey, rotations, rotationStatus);
+        return new Instance(id, deployments.values(), deploymentJobs,
+                            rotations, rotationStatus);
     }
 
     private Instance with(Deployment deployment) {
@@ -221,29 +146,13 @@ public class Instance {
     }
 
     private Instance with(Map<ZoneId, Deployment> deployments) {
-        return new Instance(id, createdAt, deploymentSpec, validationOverrides, deployments,
-                            deploymentJobs, change, outstandingChange, ownershipIssueId, owner, majorVersion,
-                            metrics, pemDeployKey, rotations, rotationStatus);
+        return new Instance(id, deployments.values(), deploymentJobs,
+                            rotations, rotationStatus);
     }
 
     public ApplicationId id() { return id; }
 
     public InstanceName name() { return id.instance(); }
-
-    public Instant createdAt() { return createdAt; }
-
-    /**
-     * Returns the last deployed deployment spec of this application,
-     * or the empty deployment spec if it has never been deployed
-     */
-    public DeploymentSpec deploymentSpec() { return deploymentSpec; }
-
-    /**
-     * Returns the last deployed validation overrides of this application,
-     * or the empty validation overrides if it has never been deployed
-     * (or was deployed with an empty/missing validation overrides)
-     */
-    public ValidationOverrides validationOverrides() { return validationOverrides; }
 
     /** Returns an immutable map of the current deployments of this */
     public Map<ZoneId, Deployment> deployments() { return deployments; }
@@ -259,38 +168,6 @@ public class Instance {
     }
 
     public DeploymentJobs deploymentJobs() { return deploymentJobs; }
-
-    /**
-     * Returns base change for this application, i.e., the change that is deployed outside block windows.
-     * This is empty when no change is currently under deployment.
-     */
-    public Change change() { return change; }
-
-    /**
-     * Returns whether this has an outstanding change (in the source repository), which
-     * has currently not started deploying (because a deployment is (or was) already in progress
-     */
-    public Change outstandingChange() { return outstandingChange; }
-
-    /** Returns ID of the last ownership issue filed for this */
-    public Optional<IssueId> ownershipIssueId() {
-        return ownershipIssueId;
-    }
-
-    public Optional<User> owner() {
-        return owner;
-    }
-
-    /**
-     * Overrides the system major version for this application. This override takes effect if the deployment
-     * spec does not specify a major version.
-     */
-    public OptionalInt majorVersion() { return majorVersion; }
-
-    /** Returns metrics for this */
-    public ApplicationMetrics metrics() {
-        return metrics;
-    }
 
     /** Returns all rotations assigned to this */
     public List<AssignedRotation> rotations() {
@@ -310,8 +187,6 @@ public class Instance {
                 .flatMap(rotation -> EndpointList.create(id, rotation.endpointId(), system).asList().stream());
         return EndpointList.of(endpointStream);
     }
-
-    public Optional<String> pemDeployKey() { return pemDeployKey; }
 
     /** Returns the status of the global rotation(s) assigned to this */
     public RotationStatus rotationStatus() {
